<resources>
    <string name="app_name">Pet Care</string>
    <string name="username">Username</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="field_required">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="pass_too_short">Password is too short</string>
    <string name="i_have_an_account">I have an account!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="logging_in">logging in...</string>
    <string name="user_not_found">User exist</string>
    <string name="error">Failed</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg">Failed, try again later</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Log out</string>
    <string name="wait">Wait...</string>
    <string name="suc">Success!</string>

    <string name="select">Select</string>
    <string name="sign_up_as">Services</string>
    <string name="animal_owner">User</string>
    <string name="housing_owner">House Owner</string>
    <string name="doctor">Pet Doctor</string>
    <string name="search_for_doctors_housing_owner">Search for doctors ,House Owner</string>
    <string name="most_rated">Most Rated</string>
    <string name="orders">Orders</string>
    <string name="housing_owner_favorite">Favorite</string>
    <string name="my_pet_animals">My Pet Animals</string>
    <string name="home">Home</string>
    <string name="no_data">No Data To Show</string>
    <string name="filter_by">Filter By:</string>
    <string name="filter">Apply</string>
    <string name="All">All</string>
    <string name="search_result">Search Results</string>
    <string name="no_search_result">No Search Results</string>
    <string name="add_pet_animal">Add Pet Animal</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="specialization">Specialization</string>
    <string name="add">Add</string>
    <string name="ch_photo">Choose Photo</string>
    <string name="update">Update</string>
    <string name="no_pet_animal">No Pet Animals To Show</string>
    <string name="add_post">Add Post</string>
    <string name="details">Details</string>
    <string name="book_now">Book Now</string>
    <string name="search">Search</string>
    <string name="add_rate">Add Rate</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="no_orders">No Orders To Show</string>
    <string name="sar">SAR</string>
    <string name="completed">Completed</string>
    <string name="refused">Refused</string>
    <string name="status_new">New</string>
    <string name="accepted">Accepted</string>
    <string name="fav">Favorite</string>
    <string name="unfav">UnFavorite</string>
    <string name="already_fav">Already Added To Favorite Before</string>
    <string name="no_fav">No Favorite To Show</string>
    <string name="receive_orders">Receive orders</string>
    <string name="new_orders">New Orders</string>
    <string name="cnt_receive_order">Can\'t receive orders now</string>
    <string name="end">End</string>
    <string name="av_date">Available Date</string>
    <string name="av_time">Available Time</string>
    <string name="date_time_booking">Booking Date/Time</string>
    <string name="change_language">Change Language</string>
    <string name="pet_doctors">Pet Doctors</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="Health_Care">Health Care</string>
    <string name="home_care">Home Care</string>

</resources>