<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.app.pet_animals.models.AddAnimalModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                tools:context=".uis.activity_login.LoginActivity">

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_pet_animal"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".05" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv"
                    app:layout_constraintVertical_bias=".3">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="36dp"
                        android:background="@drawable/circle_white">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"

                            />

                        <ImageView
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="bottom"
                            android:background="@drawable/circle_white"
                            android:padding="5dp"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tvPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/photo"
                            android:textColor="@color/black"
                            android:textSize="13sp" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"


                        >

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="56dp"
                            android:layout_weight="1"
                            android:background="@drawable/small_stroke_gray"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            app:errorEnabled="false"
                            app:hintEnabled="false">


                            <EditText
                                android:id="@+id/edtName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:gravity="start|center_vertical"
                                android:hint="@string/name"
                                android:lines="1"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:textAlignment="viewStart"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray4"
                                android:textSize="14sp"
                                android:text="@={model.name}"
                                error="@{model.error_name}"

                                />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/small_stroke_gray"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        app:errorEnabled="false"
                        app:hintEnabled="false">


                        <EditText
                            android:id="@+id/edtSpecialization"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:gravity="start|center_vertical"
                            android:hint="@string/specialization"
                            android:lines="1"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray4"
                            android:textSize="14sp"
                            android:text="@={model.specialization}"
                            error="@{model.error_specialization}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="36dp"
                        android:background="@drawable/small_rounded_primary"
                        android:text="@string/add"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
