<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="postModel"
            type="com.app.pet_animals.models.PostModel" />
        <variable
            name="name"
            type="String" />
        <variable
            name="phone"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.activity_send_order.SendOrderActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:id="@+id/llBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_arrow_left"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/add_post"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="2dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <androidx.legacy.widget.Space
                                android:layout_width="8dp"
                                android:layout_height="0dp" />

                            <FrameLayout
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:background="@drawable/circle_stroke_gray">

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    image="@{name}"
                                    />


                            </FrameLayout>

                            <androidx.legacy.widget.Space
                                android:layout_width="16dp"
                                android:layout_height="0dp" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:lines="1"
                                    android:maxEms="5"
                                    android:text='@{name}'
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text='@{phone}'
                                    android:textColor="@color/black"
                                    android:textSize="14sp" />
                            </LinearLayout>


                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/icon1"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="18dp"
                        app:layout_constraintBottom_toBottomOf="@id/cardAddress"
                        app:layout_constraintEnd_toStartOf="@id/cardAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/cardAddress">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_animal"
                            app:tint="@color/colorPrimary" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardAddress"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="3dp"
                        app:contentPadding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon1"
                        app:layout_constraintTop_toTopOf="parent">

                       <Spinner
                           android:id="@+id/spinner"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:backgroundTint="@color/colorPrimary"
                           />
                    </androidx.cardview.widget.CardView>

                    <View
                        android:id="@+id/v1"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/vertical_line"
                        android:layerType="software"
                        app:layout_constraintEnd_toEndOf="@id/icon1"
                        app:layout_constraintStart_toStartOf="@id/icon1"
                        app:layout_constraintTop_toBottomOf="@id/icon1" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/icon2"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="18dp"
                        app:layout_constraintEnd_toEndOf="@id/v1"
                        app:layout_constraintStart_toStartOf="@id/v1"
                        app:layout_constraintTop_toBottomOf="@id/v1">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/ic_edit"
                            app:tint="@color/colorPrimary" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardDetails"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="3dp"
                        app:cardCornerRadius="3dp"
                        app:contentPadding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon2"
                        app:layout_constraintTop_toTopOf="@id/icon2"
                        app:layout_constraintBottom_toBottomOf="parent"

                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:gravity="top"
                            android:hint="@string/details"
                            android:inputType="textMultiLine"
                            android:lines="1"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray5"
                            android:textSize="14sp"
                            android:text="@={postModel.post_details}"
                            />
                    </androidx.cardview.widget.CardView>



                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnBook"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_primary_btn_enabled"
                    android:text="@string/book_now"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:enabled="@{postModel.valid,default=false}"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
